# ChessEngineUCI

./: .gitignore  CMakeLists.txt  README.md  UCI.cpp  alphabeta.cpp  engine.hpp  eval.cpp  eval.hpp  main.cpp  minmax.cpp  minmax.hpp  palphabeta.cpp  pminmax.cpp  pminmax.hpp  talphabeta.cpp  tpalphabeta.cpp  tt.cpp  tt.hpp
ChessBoardAPI/board/: board.cpp  board.hpp
ChessBoardAPI/move/: move_gen.cpp
engines/: alphabeta.cpp  engine.hpp  ids_split.cpp  lazy_smp.cpp  minmax.cpp  palphabeta.cpp  pminmax.cpp  talphabeta.cpp  time.cpp  tpalphabeta.cpp  tt.cpp  tt.hpp
eval/: eval.cpp  eval.hpp  move_picker.cpp  move_picker.hpp
eval/nnue/: misc.cpp  nnue.cpp
openings/: openings-2ply-10.pgn  openings-4ply-100.pgn  openings-6ply-1000.pgn
testing/: perft_debugging.py  run.sh  test.py
testing/cute_chess/: cutechess-cli  output_pgn_file.pgn  run.sh
testing/cute_chess/engines/: curr  past
